--- a/src/global.scss
+++ b/src/global.scss
@@ -268,3 +268,8 @@ img.icon {
   background-color: #7FB2E5;
   border-radius: 15px;
 }
+.grey-line-divider {
+  border: 3px solid #5C6F82;
+  background-color: #7FB2E5;
+  border-radius: 15px;
+}
