--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -81,7 +81,7 @@
             <ion-row>
               <ion-col size="8">
                 <span class="link-presenze v-center">
-                  <ion-icon class="icon" src="./assets/icon/valutazione_studente.svg"></ion-icon>&nbsp;Vedi valutazione attività
+                  <ion-icon class="icon" src="./assets/icon/valutazione_studente.svg"></ion-icon>&nbsp;{{action(esp)}} valutazione attività
                 </span>
               </ion-col>
               <ion-col size="4" (click)="openDetail(esp)">
