Fix for asl2-454

--- a/src/global.scss
+++ b/src/global.scss
@@ -270,6 +270,6 @@ img.icon {
 }
 .grey-line-divider {
   border: 3px solid #5C6F82;
-  background-color: #7FB2E5;
+  background-color: #5C6F82;
   border-radius: 15px;
 }
