--- a/src/app/tab3/actions/valutazione-studente/valutazione-studente.component.scss
+++ b/src/app/tab3/actions/valutazione-studente/valutazione-studente.component.scss
@@ -45,4 +45,20 @@
     text-align: center;
     color: #5C6F82;
 }
-
+.domande {
+    font-size: 14px;
+    line-height: 21px;
+    color: #5C6F82;
+    justify-content: center;
+}
+.item-radio-checked {
+    font-weight: bold;
+}
+.text-area {
+    align-content: left;
+    width: 100%;
+    height: 100px;
+    color: #5C6F82;
+    font-size: 14px;
+    font-family: 'Titillium Web';
+}
