Fix for asl2-454

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,7 +5,7 @@
     <ion-row>
       <ion-col size="3"></ion-col>
       <ion-col size="6" class="text-center">
-          <ion-icon role="none" class="icon" src="./assets/icon/placeholder_studenti.svg"></ion-icon>
+          <ion-icon title="icon user" role="none" class="icon" src="./assets/icon/placeholder_studenti.svg"></ion-icon>
       </ion-col>
       <ion-col size="3"></ion-col>
     </ion-row>
