--- a/src/app/tab3/actions/valutazione-studente/valutazione-studente.component.html
+++ b/src/app/tab3/actions/valutazione-studente/valutazione-studente.component.html
@@ -2,10 +2,9 @@
     <h1 class="v-center titolo text-semibold">
         <ion-back-button defaultHref="home"></ion-back-button>{{aa.titolo}}
     </h1>
-    
 </ion-header>
 <br>
-<ion-content>
+<ion-content [scrollEvents]="true" (ionScroll)="onScroll($event)">
     <div padding>
         <ion-grid class="valutazione" *ngIf="aa && es">
             <ion-row class="heading text-semibold">
@@ -13,6 +12,15 @@
                 <ion-col size="6" class="text-center">Valutazione attività</ion-col>
                 <ion-col size="3"></ion-col>            
             </ion-row>
+            <ion-row class="heading-text">
+                <ion-col>Il seguente questionario serve per valutare la pertinenza di questa esperienza Alternanza Scuola-Lavoro con il tuo percorso formativo. Rispondi alle seguenti domande selezionando l’opzione che ti sembra adeguata. 
+                </ion-col>
+            </ion-row>
+            <ion-row class="blue-line-divider"></ion-row>
+            <ion-row class="report" [ngStyle]="styleReport(es)">
+                <ion-col><span class="text-semibold">{{ domandeCompilati }}</span><span class="text-italic"> item compilati su </span><span class="text-semibold">{{ domanteTotale }}</span><span class="text-italic"> complessive</span></ion-col>
+            </ion-row>
+    
             <ion-list>
                 <ion-item lines="none" *ngFor="let d of domande, let i=index">
                     <ion-radio-group [value]="true" [(ngModel)]="d.punteggio">
