--- a/src/app/tab3/actions/valutazione-competenze/valutazione-competenze.component.scss
+++ b/src/app/tab3/actions/valutazione-competenze/valutazione-competenze.component.scss
@@ -39,6 +39,12 @@
     text-align: center;
     color: #5C6F82;
 }
+.report {
+    font-size: 10px;
+    line-height: 15px;
+    text-align: center;
+    color: #5C6F82;
+}
 .domande {
     font-size: 14px;
     line-height: 21px;
