--- a/src/app/tab3/actions/valutazione-competenze/valutazione-competenze.component.html
+++ b/src/app/tab3/actions/valutazione-competenze/valutazione-competenze.component.html
@@ -13,7 +13,8 @@
                 <ion-col size="2"></ion-col>            
             </ion-row>
             <ion-row class="heading-text">
-                <ion-col>Il seguente questionario serve per valutare la pertinenza di questa esperienza Alternanza Scuola-Lavoro con il tuo percorso formativo. Rispondi alle seguenti domande selezionando l’opzione che ti sembra adeguata. 
+                <ion-col>Di seguito trovi la valutazione che l’ente ha 
+                    fatto sul livello della tua tua acquisizione delle competenze messe in campo durante questa attività. 
                 </ion-col>
             </ion-row>
             <ion-row class="grey-line-divider"></ion-row>
