--- a/src/app/tab3/actions/valutazione-studente/valutazione-studente.component.html
+++ b/src/app/tab3/actions/valutazione-studente/valutazione-studente.component.html
@@ -28,7 +28,7 @@
             </ion-row>
             <ion-row class="blue-line-divider"></ion-row>
             <ion-row class="report" [ngStyle]="styleReport(es)">
-                <ion-col><span class="text-semibold">{{ domandeCompilati }}</span><span class="text-italic"> item compilati su </span><span class="text-semibold">{{ domanteTotale }}</span><span class="text-italic"> complessive</span></ion-col>
+                <ion-col><span class="text-semibold">{{ getDomandeCompilate() }}</span><span class="text-italic"> item compilati su </span><span class="text-semibold">{{ domanteTotale }}</span><span class="text-italic"> complessive</span></ion-col>
             </ion-row>
     
             <ion-list>
