--- a/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
+++ b/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
@@ -7,12 +7,26 @@
 <ion-content>
     <ion-grid *ngIf="aa && es">
         <ion-row>
-            <ion-col>
-                <span class="attributes text-semibold">Stato:&nbsp;<span [style.color]="getColor(aa)">{{
+            <ion-col size="6"><span class="attributes text-semibold">Generale:</span></ion-col>
+            <ion-col size="6">
+                <span class="float-right attributes text-semibold">Stato:&nbsp;<span [style.color]="getColor(aa)">{{
                         getStatoNome(aa.stato) }}</span></span>
             </ion-col>
         </ion-row>
+        <ion-row class="blue-line-divider"></ion-row>
         <br />
+        <ion-row>
+            <ion-col size="6">
+                <span class="attributes text-semibold ">Ore inserite:&nbsp;</span><span
+                    class="attributes-value">{{attivita.oreValidate + attivita.oreDaValidare}}</span>
+            </ion-col>
+            <ion-col size="5">
+                <span class="float-right">
+                    <span class="attributes text-semibold">Da validare:&nbsp;</span><span
+                        class="attributes-value-validare">{{attivita.oreDaValidare}}</span>
+                </span>
+            </ion-col>
+        </ion-row>
         <ion-row *ngIf="!aa.rendicontazioneCorpo">
             <ion-col>
                 <a class="link-presenze v-center noUnderLine" href="javascript:void(0);" (click)="openPresenze(aa, es)">
@@ -43,17 +57,11 @@
         <br />
         <ion-row>
             <ion-col size="6">
-                <span class="attributes text-semibold ">Ore inserite:&nbsp;</span><span
-                    class="attributes-value">{{attivita.oreValidate + attivita.oreDaValidare}}</span>
-            </ion-col>
-            <ion-col size="5">
-                <span class="float-right">
-                    <span class="attributes text-semibold">Da validare:&nbsp;</span><span
-                        class="attributes-value-validare">{{attivita.oreDaValidare}}</span>
-                </span>
+                <span class="attributes text-semibold ">Dettagli:&nbsp;</span>
             </ion-col>
         </ion-row>
-        <br>
+        <ion-row class="blue-line-divider"></ion-row>
+        <br />
         <ion-row>
             <ion-col><span class="attributes text-semibold">Periodo:&nbsp;</span><span
                     class="attributes-value">{{aa.dataInizio | date: 'dd/MM/yyyy' }} -
@@ -97,14 +105,30 @@
                     class="attributes-value ion-text-capitalize">{{aa.referenteScuolaTelefono}}</span>
             </ion-col>
         </ion-row>
-        <br>
+        <br />
         <ion-row *ngIf="hasCoordinate()">
             <ion-col>
                 <div id="map" class="map"></div>
             </ion-col>
         </ion-row>
-        <br>
-        <ion-row class="heading-2 text-semibold">Documenti allegati:</ion-row>
+        <br />
+        <ion-row class="attributes text-semibold">
+            <ion-col size="6">
+                <span class="attributes text-semibold ">Documenti allegati:&nbsp;</span>
+            </ion-col>
+        </ion-row>
+        <ion-row class="blue-line-divider"></ion-row>
+        <br />
+        <ion-row>
+            <div *ngIf="attivita.aa.stato != 'archiviata'" class="button-upload">
+                <a class="label-button noUnderLine" href="javascript:void(0);" (click)="openDocumentUpload()">
+                    <label>Carica documento &nbsp;&nbsp;&nbsp;
+                        <ion-icon class="icon" src="./assets/icon/it-upload.svg"></ion-icon>
+                    </label>
+                </a>
+            </div>
+        </ion-row>
+        <br />
         <div class="item" *ngFor="let documento of es.documenti">
             <ion-grid>
                 <ion-row>
@@ -150,15 +174,5 @@
         <div *ngIf="!es?.documenti || es?.documenti.length==0" class="attributes">
             Nessun documento attualmente caricato
         </div>
-        <br>
-        <ion-row>
-            <div *ngIf="attivita.aa.stato != 'archiviata'" class="button-upload">
-                <a class="label-button noUnderLine" href="javascript:void(0);" (click)="openDocumentUpload()">
-                    <label>Carica documento &nbsp;&nbsp;&nbsp;
-                        <ion-icon class="icon" src="./assets/icon/it-upload.svg"></ion-icon>
-                    </label>
-                </a>
-            </div>
-        </ion-row>
     </ion-grid>
 </ion-content>
